# mtuci-rs

./: .gitignore  README.md  general.yml
Homework/Homework1/: FizzBuzz.rs  Game
Homework/Homework2/: task1.rs
Homework/Homework3/: Vector.rs  О_векторах.rs
Project/: Cargo.toml  ToDo.rs  simple_source_code.rs
RustBook/Chapter3/: Code3.rs
RustBook/Chapter5/: Square.rs
RustBook/Chapter6/: States.rs
rustlings/: quiz1.rs  variables2.rs  variables4.rs
rustlings/clippy/: clippy2.rs  clippy3.rs
rustlings/conversions/: as_ref_mut.rs  from_into.rs
rustlings/enums/: enums2.rs  enums3.rs
rustlings/error_handling/: error1.rs  error2.rs  error3.rs  error4.rs  error5.rs  error6.rs
rustlings/functions/: functions1.rs  functions2.rs  functions3.rs  functions4.rs  functions5.rs
rustlings/if/: if1.rs  if2.rs
rustlings/intro/: intro1.rs  intro2.rs
rustlings/lifetimes/: lifetime1.rs  lifetime2.rs  lifetime3.rs
rustlings/modules/: modules1.rs  modules2.rs  modules3.rs
rustlings/move_semantics/: 2.rs  3.rs  4.rs
rustlings/options/: option1.rs  option2.rs  option3.rs
rustlings/primetive_types/: type2.rs  type3.rs  type6.rs
rustlings/smart_pointers/: arc1.rs  box1.rs  rc1.rs
rustlings/strings/: string2.rs  strings1.rs  strings3.rs
rustlings/structs/: structs.3  structs1.rs  structs2.rs
rustlings/tests/: test2.rs  test3.rs  test4.rs
rustlings/threads/: thread.rs  thread2.rs  threat3.rs
rustlings/traits/: trait1.rs  trait2.rs  trait3.rs  trait4.rs  trait5.rs
rustlings/variables/: variables1.rs  variables3.rs  variables5.rs
(+2 files in other folders)
